--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer:  Debian Pkg-e Team <pkg-e-devel@lists.alioth.debian.org>
 Uploaders: Albin Tonnerre <albin.tonnerre@gmail.com>,
  Xavier Oswald <x.oswald@free.fr>, Jan Lübbe <jluebbe@debian.org>
-Build-Depends: debhelper (>= 6.0.6), cdbs (>= 0.4.52), libeet-dev, libembryo-dev,
+Build-Depends: debhelper (>= 6.0.6), cdbs (>= 0.4.52), libeet-dev,
  libedje-dev, libedje-bin, libpam0g-dev, libefreet-dev,
  libecore-dev, libedbus-dev, libxext-dev
 Standards-Version: 3.7.3
