--- a/debian/control
+++ b/debian/control
@@ -4,10 +4,11 @@ Priority: optional
 Maintainer:  Debian Pkg-e Team <pkg-e-devel@lists.alioth.debian.org>
 Uploaders: Albin Tonnerre <albin.tonnerre@gmail.com>,
  Xavier Oswald <x.oswald@free.fr>, Jan Lübbe <jluebbe@debian.org>
-Build-Depends: debhelper (>= 6.0.6), cdbs (>= 0.4.52), libeet-dev,
- libedje-dev, libedje-bin, libpam0g-dev, libefreet-dev,
- libecore-dev, libedbus-dev, libxext-dev
-Standards-Version: 3.7.3
+Build-Depends: debhelper (>= 6.0.7), cdbs (>= 0.4.52), libeet-dev (>= 1.0.1),
+ libedje-dev (>= 0.9.9.050), libedje-bin, libpam0g-dev, libefreet-dev,
+ libecore-dev (>= 0.9.9.050), libedbus-dev, libxext-dev, libeet-bin,
+ libevas-dev (>= 0.9.9.050)
+Standards-Version: 3.8.0
 Vcs-Git: git://git.debian.org/pkg-e/apps/e.git
 Vcs-Browser: http://git.debian.org/?p=pkg-e/apps/e.git
 Homepage: http://www.enlightenment.org
