--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,7 @@ rm -f config.cache
 
 AC_INIT(enlightenment, 0.16.999.050, enlightenment-devel@lists.sourceforge.net)
 AC_PREREQ(2.52)
-AC_CONFIG_SRCDIR(configure.in)
+AC_CONFIG_SRCDIR(configure.ac)
 AC_CANONICAL_BUILD
 AC_CANONICAL_HOST
 AC_ISC_POSIX
