--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,7 @@ Homepage: http://www.enlightenment.org
 
 Package: e17
 Architecture: any
-Depends: ${misc:Depends}, ${shlibs:Depends}, e17-data (= ${source:Version}), libevas-0.9.9.050b-engines, libedje-bin
+Depends: ${misc:Depends}, ${shlibs:Depends}, e17-data (= ${source:Version}), libevas-engines, libedje-bin
 Conflicts: enlightenment
 Provides: x-window-manager
 Description: The Enlightenment DR17 Window Manager
