--- a/debian/control
+++ b/debian/control
@@ -5,9 +5,9 @@ Maintainer:  Debian Pkg-e Team <pkg-e-devel@lists.alioth.debian.org>
 Uploaders: Albin Tonnerre <albin.tonnerre@gmail.com>,
  Xavier Oswald <x.oswald@free.fr>, Jan Lübbe <jluebbe@debian.org>
 Build-Depends: debhelper (>= 6), cdbs, libeet-dev (>= 1.0.1),
- libedje-dev (>= 0.9.9.060), libefreet-dev (>= 0.5.0.060),
- libecore-dev (>= 0.9.9.060), libedbus-dev (>= 0.5.0.060),
- libevas-dev (>= 0.9.9.060), libeina-dev (>= 0.0.2.060),
+ libedje-dev (>= 0.9.9.061), libefreet-dev (>= 0.5.0.061),
+ libecore-dev (>= 0.9.9.061), libedbus-dev (>= 0.5.0.061),
+ libevas-dev (>= 0.9.9.061), libeina-dev (>= 0.0.2.060),
  libasound2-dev, libxext-dev, libeet-bin, libpam0g-dev
 Standards-Version: 3.8.1
 Vcs-Git: git://git.debian.org/pkg-e/apps/e.git
@@ -16,7 +16,7 @@ Homepage: http://www.enlightenment.org
 
 Package: e17
 Architecture: any
-Depends: ${misc:Depends}, ${shlibs:Depends}, e17-data (= ${source:Version}), libevas-engines, libedje-bin
+Depends: ${misc:Depends}, ${shlibs:Depends}, e17-data (= ${source:Version}), libevas-engine-software-x11, libedje-bin
 Conflicts: enlightenment
 Provides: x-window-manager
 Description: The Enlightenment DR17 Window Manager
@@ -58,9 +58,9 @@ Package: efl-dev
 Architecture: any
 Section: devel
 Depends: ${misc:Depends}, libeet-dev (>= 1.0.1),
- libedje-dev (>= 0.9.9.060), libefreet-dev (>= 0.5.0.060),
- libecore-dev (>= 0.9.9.060), libedbus-dev (>= 0.5.0.060),
- libevas-dev (>= 0.9.9.060), libeina-dev (>= 0.0.2.060)
+ libedje-dev (>= 0.9.9.061), libefreet-dev (>= 0.5.0.061),
+ libecore-dev (>= 0.9.9.061), libedbus-dev (>= 0.5.0.061),
+ libevas-dev (>= 0.9.9.061), libeina-dev (>= 0.0.2.060)
 Description: EFL headers, static libraries and documentation
  Enlightenment is an advanced window manager for X11. Unique
  features include: a fully animated background, nice drop shadows
