--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Build-Depends: debhelper (>= 6), cdbs, libeet-dev (>= 1.0.1),
  libedje-dev (>= 0.9.9.061), libefreet-dev (>= 0.5.0.061),
  libecore-dev (>= 0.9.9.061), libedbus-dev (>= 0.5.0.061),
  libevas-dev (>= 0.9.9.061), libeina-dev (>= 0.0.2.060),
- libasound2-dev, libxext-dev, libeet-bin, libpam0g-dev
+ libasound2-dev [!kfreebsd-amd64 !kfreebsd-i386 !hurd-i386], libxext-dev, libeet-bin, libpam0g-dev
 Standards-Version: 3.8.2
 Vcs-Git: git://git.debian.org/pkg-e/apps/e.git
 Vcs-Browser: http://git.debian.org/?p=pkg-e/apps/e.git
