Fix the short description for e17-dbg

--- a/debian/control
+++ b/debian/control
@@ -75,7 +75,7 @@ Architecture: any
 Section: debug
 Depends: ${misc:Depends}, e17 (= ${binary:Version})
 Priority: extra
-Description: The Enlightenment DR17 Window Manager
+Description: The Enlightenment DR17 Window Manager - debugging symbols
  Enlightenment is an advanced window manager for X11. Unique
  features include: a fully animated background, nice drop shadows
  around windows, backed by an extremely clean and optimized
