--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: e17
 Section: x11
 Priority: optional
 Maintainer:  Debian Pkg-e Team <pkg-e-devel@lists.alioth.debian.org>
-Uploaders: Albin Tonnerre <albin.tonnerre@gmail.com>,
+Uploaders: Albin Tonnerre <lutin@debian.org>,
  Xavier Oswald <x.oswald@free.fr>, Jan Lübbe <jluebbe@debian.org>
 Build-Depends: debhelper (>= 6), cdbs, libeet-dev (>= 1.0.1),
  libedje-dev (>= 0.9.93.063), libefreet-dev (>= 0.5.0.063),
